[package]
edition = "2021"
name = "binding"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.15", features = ["napi4"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2"
